2005-11-23  Peter Korsgaard  <peter.korsgaard@barco.com>

	* src/gunzip.c (do_gunzip): Fixed diag_printf format string warnings.

2005-10-17  Gary Thomas  <gary@mlbassoc.com>

	* src/iomem.c (do_iopeek): Correct number of options.

2005-09-09  Andrew Dyer  <adyer@righthandtech.com>
 
 	* src/load.c: add calls to redboot_getc_terminate before exiting
 	load_elf_image() in various error scenarios, change the final call
 	to redboot_getc_terminate to have the error flag set.  This will
 	cause a tftp nak and close down the connection since for ELF files
 	we don't read the whole content but end the connection when the
 	runnable parts are in.
 
 	* src/net/tftp_client.c: add tftp_error() to send an error back to
 	the server. define tftp_stream_terminate() and pass it into the
 	redboot interface.
 
2005-09-08  Gary Thomas  <gary@mlbassoc.com>

	* src/io.c: 
	* include/redboot.h: 
	* doc/redboot.sgml: 
	* cdl/redboot.cdl: Add support for ANSI keyboard cursor keys
	such as HOME/END/Arrows

2005-09-08  Stefan Sommerfeld  <sommerfeld@mikrom.com>
	* src/flash.c: Fix usage of "fis create", more arguments are optional
	Set mem_base to mem_addr instead of flash_addr for a loaded image
	
2005-09-03  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/redboot.cdl: White space changes to aid readability. 

2005-09-03  Isaac Claymore   <iclaymore@gmail.com>

	* src/flash.c (fis_create): Print an error if the FIS directory is
	full when we try to create a new entry.
	
2005-08-17  David Vrabel  <dvrabel@arcom.com>

	* cdl/redboot.cdl (CYGNUM_REDBOOT_DEFAULT_NETWORK_DEVICE): Removed
	since isn't used anywhere.
	* cdl/redboot.cdl (CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE): New option 
	to specify the name of the default network device.

	* src/net/net_io.c: Use CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE as
	the default to the net_device config option.

2005-07-06  Isaac Claymore <iclaymore@gmail.com>

	* src/fconfig.c: (get_config): Verify the length of the script is
	less than MAX_SCRIPT_LENGTH.
